// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-auth-form HOC withAuthForm with props renders correctly 1`] = `
<MockComponent
  email="test@test.js"
  onChange={[Function]}
  password="123"
/>
`;

exports[`with-auth-form HOC withAuthForm without props renders correctly 1`] = `
<MockComponent
  email=""
  onChange={[Function]}
  password=""
/>
`;
